# rag_demo

./: .gitignore  LICENSE  README.md  pyproject.toml  simple_rag.py
data/: tech_companies.txt
src/: run_rag.py
src/simple_rag/: __init__.py
src/templates/: index.html
